Modified Many Minor Things
Also added one more page for user to review their previously ordered products.
